[package]
name = "voikko-rs"
version = "1.0.2"
authors = ["Ronja Koistinen <ronja.koistinen@kapsi.fi>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/ronjakoi/voikko-rs"
description = "Rust bindings for the Voikko library"

[dependencies]
libc = "0.2"
unicode-segmentation = "1.2"
